folder pages, file : News.js : refactorized code base and css to make sure elements are well aligned and responsive design doesn't hide anything

--- a/src/style/pages/_news.scss
+++ b/src/style/pages/_news.scss
@@ -36,7 +36,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height:280px;
+    // height:280px;
     border: 1px solid wheat;
     box-shadow: 1px 1px 5px red;
     border-radius: 2px;
@@ -53,18 +53,17 @@ img {
         width:250px;
         height:250px;
     }
-    &__newsContent{
+    &__container{
         width:80%;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        height:100%;
+        // justify-content: space-between;
         // border:1px solid green;
         @media screen and (max-width:900px) {
             width:100%;
             
         }
-        &__newsHeader{
+        &__header{
             display: flex;
             justify-content: space-between;
             padding: 10px;
@@ -81,7 +80,7 @@ img {
                 display: flex;
                 align-items: center;
                 &:hover{
-                    transform: scale(1.1);
+                    transform: scale(0.9);
                     cursor: pointer;
                 }
                 @media screen and (max-width:900px) {
@@ -90,9 +89,10 @@ img {
                 }
             }
         }
-        &__newsTitle{
+        &__title{
             display: flex;
             padding: 10px;
+            font-size: 0.9em;
             // border:1px solid red;
             &--icon{
                 display: flex;
@@ -100,17 +100,23 @@ img {
                 margin-right: 20px;
             }
             @media screen and (max-width:900px) {
-                text-align: center;
+                justify-content: center;
             }
         }
-        &__newsArticle{
+        &__article{
             padding: 10px;
             overflow-wrap: break-word;
-            @media screen and (max-width:1070px) {
+            height : 130px;
+            font-size: 0.9em;
+            @media screen and (max-width:1200px) {
                 font-size: 0.8em;
             }
+            @media screen and (max-width:900px) {
+                height:auto;
+                font-size: 0.7em;
+            }
         }
-        &__newsListen{
+        &__listen{
             // border:1px solid green;
             display: flex;
             align-items: center;
